gen/pp/s1721380/FormatterParser.java
// Generated from C:/Users/Eric/IdeaProjects/Module8/src/pp/s1721380\Formatter.g4 by ANTLR 4.7
package pp.s1721380;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FormatterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ARGINDEX=2, FLAG=3, WIDTH=4, PRECISION=5, GENERAL=6, CHARACTER=7, 
		INTEGRAL=8, FLOAT=9;
	public static final int
		RULE_formatter = 0, RULE_conversion = 1;
	public static final String[] ruleNames = {
		"formatter", "conversion"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'%'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "ARGINDEX", "FLAG", "WIDTH", "PRECISION", "GENERAL", "CHARACTER", 
		"INTEGRAL", "FLOAT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Formatter.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FormatterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FormatterContext extends ParserRuleContext {
		public ConversionContext conversion() {
			return getRuleContext(ConversionContext.class,0);
		}
		public TerminalNode ARGINDEX() { return getToken(FormatterParser.ARGINDEX, 0); }
		public List<TerminalNode> FLAG() { return getTokens(FormatterParser.FLAG); }
		public TerminalNode FLAG(int i) {
			return getToken(FormatterParser.FLAG, i);
		}
		public TerminalNode WIDTH() { return getToken(FormatterParser.WIDTH, 0); }
		public TerminalNode PRECISION() { return getToken(FormatterParser.PRECISION, 0); }
		public FormatterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formatter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormatterListener ) ((FormatterListener)listener).enterFormatter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormatterListener ) ((FormatterListener)listener).exitFormatter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormatterVisitor ) return ((FormatterVisitor<? extends T>)visitor).visitFormatter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormatterContext formatter() throws RecognitionException {
		FormatterContext _localctx = new FormatterContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_formatter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(4);
			match(T__0);
			setState(6);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARGINDEX) {
				{
				setState(5);
				match(ARGINDEX);
				}
			}

			setState(11);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FLAG) {
				{
				{
				setState(8);
				match(FLAG);
				}
				}
				setState(13);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(15);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WIDTH) {
				{
				setState(14);
				match(WIDTH);
				}
			}

			setState(18);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PRECISION) {
				{
				setState(17);
				match(PRECISION);
				}
			}

			setState(20);
			conversion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConversionContext extends ParserRuleContext {
		public TerminalNode GENERAL() { return getToken(FormatterParser.GENERAL, 0); }
		public TerminalNode CHARACTER() { return getToken(FormatterParser.CHARACTER, 0); }
		public TerminalNode INTEGRAL() { return getToken(FormatterParser.INTEGRAL, 0); }
		public TerminalNode FLOAT() { return getToken(FormatterParser.FLOAT, 0); }
		public ConversionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conversion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormatterListener ) ((FormatterListener)listener).enterConversion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormatterListener ) ((FormatterListener)listener).exitConversion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormatterVisitor ) return ((FormatterVisitor<? extends T>)visitor).visitConversion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConversionContext conversion() throws RecognitionException {
		ConversionContext _localctx = new ConversionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_conversion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GENERAL) | (1L << CHARACTER) | (1L << INTEGRAL) | (1L << FLOAT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}